# Discord-Webhook-News

./: .env.sample  .gitignore  README.md  crawling.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: discord_hook.yaml  keep_alive.yaml
docs/: settings.md  use_guide.md
